web/style/transvision.css
/* Fonts */
/* Fira Sans 4.106 https://carrois.com/typefaces/FiraSans */

@font-face {
    font-family: 'Fira Sans UltraLight';
    src: url(/fonts/FiraSans/FiraSans-UltraLight.woff2) format('woff2'),
         url(/fonts/FiraSans/FiraSans-UltraLight.woff) format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Fira Sans UltraLight';
    src: url(/fonts/FiraSans/FiraSans-UltraLightItalic.woff2) format('woff2'),
         url(/fonts/FiraSans/FiraSans-UltraLightItalic.woff) format('woff');
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: 'Fira Sans UltraLight';
    src: url(/fonts/FiraSans/FiraSans-Book.woff2) format('woff2'),
         url(/fonts/FiraSans/FiraSans-Book.woff) format('woff');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Fira Sans Light';
    src: url(/fonts/FiraSans/FiraSans-Light.woff2) format('woff2'),
         url(/fonts/FiraSans/FiraSans-Light.woff) format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Fira Sans Light';
    src: url(/fonts/FiraSans/FiraSans-LightItalic.woff2) format('woff2'),
         url(/fonts/FiraSans/FiraSans-LightItalic.woff) format('woff');
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: 'Fira Sans Light';
    src: url(/fonts/FiraSans/FiraSans-Medium.woff2) format('woff2'),
         url(/fonts/FiraSans/FiraSans-Medium.woff) format('woff');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Fira Sans';
    src: url(/fonts/FiraSans/FiraSans-Book.woff2) format('woff2'),
         url(/fonts/FiraSans/FiraSans-Book.woff) format('woff');
    font-weight: normal;
    font-style: normal;
}


/* General structure */

html {
    min-height: 100%;
}

body {
    color: #333;
    font-family: 'Fira Sans Light', Arial, sans-serif;
    font-size: 0.9em;
    line-height: 1.5;
    margin: 0 auto;
    padding: 0;
    position: relative;
    min-width: 320px;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

#main-wrapper {
    background-color: #cce0f0;
    border-top: 2px solid #fff;
    padding-bottom: 0.5em;
    flex: 1;
    -ms-flex: 1 0 0;
}

#pagecontent {
    padding: 0 15px;
}

a,
a:visited {
    color: #0095dd;
    text-decoration: none;
}

a:hover {
    color: #00539f;
    text-decoration: underline;
}

#beta-badge {
    position: absolute;
    width: 130px;
    height: 80px;
    top: -25px;
    left: -50px;
    background-color: #ed3860;
    text-align: center;
    line-height: 120px;
    transform: rotate(-45deg);
}

#beta-badge span {
    display: inline-block;
    vertical-align: middle;
    font-size: 1.2em;
    color: #fff;
}
/* Titles */

#current {
    font-family: 'Fira Sans UltraLight', Arial, sans-serif;
}

h1,
h2,
#current {
    color: #333;
    font-size: 1.5em;
    text-align: center;
    margin: 0.5em auto;
    width: 90%;
    clear: both;
    max-width: 1014px;
}

#logo {
    margin: 0 auto;
}

#logo img {
    width: 250px;
}

/* Prevents the tiny resize of the logo on hover */
#logo a:hover {
    text-decoration: none;
}

h1 a,
h1 a:visited {
    color: #333;
}

h2 {
    border-bottom: 1px solid #a9a9a9;
    padding: 15px 0;
}

h3 {
    width: 100%;
    padding: 15px 0;
    text-align: center;
    font-size: 18px;
    margin: 0 auto;
}

h1,
h2,
h3 {
    font-weight: normal;
}

.subtitle {
    text-align: center;
}

#page_title {
    font-family: 'Fira Sans UltraLight', Arial, sans-serif;
    border-bottom: none;
    font-size: 1.9em;
    font-weight: normal;
    padding-bottom: 0;
}

.page_description {
    font-size: 14px;
    font-weight: normal;
    margin: 5px auto 15px;
    padding: 0;
    text-align: center;
    width: 80%;
}

#current {
    font-size: 1.9em;
    padding: 0.1em 0;
    margin-top: 10px;
}

#current strong {
    display: inline-block;
    padding: 0 0.5em;
    border-left: 1px solid #a9a9a9;
    margin-left: 0.5em;
    color: #ff9500;
}

/* Top and bottom links */

.links {
    clear: both;
    font-size: 1em;
    margin: 4em auto 1em auto;
    text-align: left;
    width: 660px;
}

.links h3 {
    padding: 0 0 6px 12px;
    margin: 0;
    font-size: 14px;
    text-align: center;
    width: 100%;
}

.links ul {
    float: left;
    list-style-type: none;
    margin: 0 0 0 8px;
    padding: 0;
    width: 150px;
}

.linkscolumn {
    width: 140px;
    float: left;
    padding-bottom: 10px;
}

#qa_column {
    width: 360px;
    border-left: 1px dotted #d9d9d9;
    border-right: 1px dotted #d9d9d9;
}

#qa_column ul {
    width: 172px;
}

#links-top {
    width: 100%;
    background: #fff;
    margin: 0;
    padding: 20px 0 10px;
    float: left;
    display: none;
}

.nojs #links-top {
    display: block;
}

#links-top .container {
    width: 660px;
    margin: 0 auto;
}

#links-top-button-container {
    width: 100%;
    max-width: 1014px;
    height: 36px;
    margin-left: auto;
    margin-right: auto;
}

#links-top-button span {
    display: none;
}

#links-top-button {
    clear: both;
    display: block;
    float: right;
    margin-right: 5px;
    width: 147px;
    height: 36px;
    background: url(/img/menu.png) center 0 no-repeat transparent;
}

@media
(-webkit-min-device-pixel-ratio: 2),
(min-resolution: 192dpi) {
    #links-top-button {
        background: url(/img/menu_highres.png) center 0 no-repeat transparent;
        background-size: 147px 72px;
    }
}

.nojs #links-top-button {
    background-position: 0 -38px;
}

.selected_view,
.selected_view:visited {
    color: #00539f;
    font-weight: bold;
}

#noscript-warning {
    color: #ed3860;
    text-align: center;
    font-weight: bold;
    padding: 0 30px;
    margin-top: 20px;
    display: none;
}

.nojs #noscript-warning {
    display: block;
}

/* Tables */

table {
    border-collapse: collapse;
    margin: 0.5em auto;
}

tr:nth-child(odd) {
    background-color: rgba(255, 255, 255, 0.9);
}
/* ... */

